--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ajv": "^6.10.0",
     "material-design-icons-iconfont": "^4.0.5",
     "vue": "^2.5.2",
-    "vuetify": "^1.5.11"
+    "vuetify": "^1.5.11",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
